# portfolio

./: .gitignore  pyproject.toml
my_webite/: manage.py
my_webite/my_webite/: asgi.py  settings.py  urls.py  views.py  wsgi.py
my_webite/templates/: home.html
my_website/: backup.json  requirements.txt
my_website/accounts/: admin.py  context_processors.py  forms.py  models.py  signals.py  urls.py  utils.py  validators.py  views.py
my_website/accounts/migrations/: 0001_initial.py  0002_userprofile.py  0003_remove_userprofile_address_line_1_and_more.py  0004_userprofile_location.py
my_website/customers/: urls.py  views.py
my_website/employees/: models.py  urls.py  views.py
my_website/employees/migrations/: 0001_initial.py
my_website/home/: urls.py  views.py
my_website/marketplace/: admin.py  context_processors.py  models.py  urls.py  views.py
my_website/marketplace/migrations/: 0001_initial.py  0002_tax.py  0003_alter_tax_options.py
my_website/menu/: admin.py  forms.py  models.py
my_website/menu/migrations/: 0001_initial.py  0002_alter_category_options.py  0003_alter_fooditem_category.py  0004_alter_category_category_name.py
my_website/my_website/: asgi.py  settings.py  urls.py  views.py  wsgi.py
my_website/orders/: admin.py  forms.py  models.py  request_object.py  urls.py  utils.py  views.py
my_website/orders/migrations/: 0001_initial.py  0002_order_total_data_order_vendors.py  (+1 more)
my_website/templates/: 403.html  employee_detail.html  home.html
my_website/todo/: admin.py  models.py  urls.py  views.py
my_website/tomato/: urls.py  views.py
(+44 files in other folders)
